--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "paper-button": "PolymerElements/paper-button#2.0-preview",
     "paper-checkbox": "PolymerElements/paper-checkbox#2.0-preview",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#2.0-preview",
+    "iron-input": "firmfirm/iron-input#^v2.0.0-alpha.1",
     "paper-input": "PolymerElements/paper-input#2.0-preview",
     "paper-spinner": "PolymerElements/paper-spinner#2.0-preview",
     "paper-styles": "PolymerElements/paper-styles#2.0-preview",
@@ -46,6 +47,7 @@
     "iron-behaviors": "2.0-preview",
     "iron-validatable-behavior": "2.0-preview",
     "iron-a11y-keys-behavior": "2.0-preview",
-    "iron-meta": "2.0-preview"
+    "iron-meta": "2.0-preview",
+    "iron-input": "^v2.0.0-alpha.1"
   }
 }
